# anya-core

./: .env.example  .env.template  .gitignore  .gitmodules  AGENT_ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Clarinet.toml  Cross.toml  DAO.md  DEVPLAN.md  DIFFERENCES.md  Dockerfile  GOVERNANCE.md  INDEX.md  LICENSE  LICENSE.md  NEW_FEATURES.md  README.md  ROADMAP.md  Rewriteplan.md  SECURITY.md  SYSTEM_MAP.md  TESTING.md  TODO.md  analysis_options.yaml  anya-core-config.json  anya-core-manager.ps1  anya.code-workspace  audit.toml  auto-organize.ps1  book.toml  build.rs  build.yaml  commit_push.ps1  commit_push.sh  delete_redundant_workflows.sh  deny.toml  (+36 more)
anya-bitcoin/: Cargo.toml
anya-bitcoin/docs/: SUMMARY.md
anya-bitcoin/docs/features/: README.md  block-management.md  block-operations.md  block-processing.md  block-types.md  transaction-management.md  transaction-operations.md  transaction-types.md  wallet-integration.md  wallet-management.md  wallet-operations.md  wallet-types.md
anya-bitcoin/docs/integration/: README.md  api-reference.md  error-handling.md  event-handling.md
anya-bitcoin/docs/network/: README.md  network-types.md  node-configuration.md  p2p-communication.md
anya-bitcoin/docs/performance/: README.md  benchmarks.md  optimization-guide.md
anya-bitcoin/docs/security/: README.md  key-management.md  key-operations.md  key-types.md  network-authentication.md  network-authorization.md  network-security.md  transaction-security.md  transaction-validation.md  transaction-verification.md
anya-bitcoin/docs/smart-contracts/: README.md  contract-templates.md  dlc-implementation.md  script-types.md
anya-bitcoin/docs/testing/: README.md  integration-tests.md  network-tests.md  unit-tests.md
anya-bitcoin/src/: lib.rs
anya-core/: Cargo.toml  build.rs
anya-core/src/: .gitignore  analytics.rs  dao.rs  data.rs  data_storage.rs  gorules.rs  homomorphic_encryption.rs  install.rs  lib.rs  main.rs  main_system.rs  secure_storage.rs  setup_project.rs
anya-core/src/ai/: ethics.rs  mod.rs
anya-core/src/alignment/: mod.rs
anya-core/src/api/: mod.rs
anya-core/src/architecture/: hexagonal.rs  mod.rs  system_arch.rs
anya-core/src/banking/: open_banking.rs
anya-core/src/benchmarks/: mod.rs
anya-core/src/bitcoin/: identity_authentication.rs  lightning_network.rs  mod.rs  node.rs  privacy.rs
anya-core/src/blockchain/: mod.rs
anya-core/src/data_pipeline/: mod.rs
anya-core/src/docs/: manager.rs
anya-core/src/dowe/: mod.rs
anya-core/src/enterprise/: mod.rs
anya-core/src/license/: mod.rs
anya-core/src/market_data/: mod.rs
anya-core/src/memory/: optimized_manager.rs
anya-core/src/metrics/: agent_metrics.rs
anya-core/src/ml/: adaptive_model.rs  advanced_integration.rs  change_processor.rs  ml_types.rs  mod.rs  model_adaptation.rs  module_manager.rs  npu_enhanced.rs  pipeline_stages.rs
anya-core/src/ml_core/: mod.rs  optimizer.rs
anya-core/src/ml_logic/: agent_system.rs  dao_rules.rs  data_processing.rs  system_evaluation.rs  unified_system.rs
anya-core/src/network/: mod.rs  (+2 more)
anya-enterprise/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  sign  truct with comprehensive blockchain support
anya-enterprise/anya-enterprise/: CHANGELOG.md
anya-enterprise/docs/: SUMMARY.md
anya-enterprise/scripts/: setup.sh  system_setup.sh
anya-enterprise/src/: api.rs  bitcoin_support.rs  data_feed.rs  dlc.rs  dlc_support.rs  gorules.rs  lib.rs  main.rs  main_system.rs  network_discovery.rs  reporting.rs  secure_multiparty_computation.rs  setup_check.rs  setup_project.rs
anya-extensions/: Cargo.toml
anya-extensions/docs/: SUMMARY.md
anya-extensions/src/: lib.rs
anya-mobile/: Cargo.toml
anya-mobile/src/: bridge.rs  dao.rs  lib.rs  security.rs  spv.rs  subscription.rs  wallet.rs  web5.rs
dependencies/: .env.example  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE.md  NEW_FEATURES.md  README.md  ROADMAP.md  SECURITY.md  anya-core  anya-web5  deny.toml  docker-compose.debug.yml  docker-compose.yml  file.txt.gpg  install_dependencies.sh  package.json  requirements.txt  rust_combined.yml  triagebot.toml
dependencies/.cargo/: config.toml
dependencies/.github/: security.yml
dependencies/anya-bitcoin/: Cargo.toml
dependencies/anya-enterprise/: CHANGELOG.md  Cargo.toml  README.md  truct with comprehensive blockchain support
dependencies/docs/: AGENT_ARCHITECTURE.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  ML_SYSTEM_ARCHITECTURE.md  README.md  RECOMMENDATIONS.md  SUMMARY.md  SYSTEM_INTEGRATION.md  identity.md  security.md  web5.md
dependencies/migrations/: 20240328000003_add_web5_tables.sql
dependencies/scripts/: integration_test.sh  license_check.sh  security_check.sh
dependencies/src/: config.rs  main.rs
dependencies/tests/: integration_tests.rs
scripts/: Cargo.toml  Dockerfile  add_documentation.ps1  align_codebase.ps1  automated_fixes.rs  backup_recovery.sh  build-linux.sh  build.sh  check_documentation.ps1  check_error_handling.ps1  commit_cycle.bat  commit_cycle.dart  commit_cycle.sh  deploy_security.rs  enforce_style.ps1  fix_error_handling.ps1  generate_docs_structure.sh  install.py  install_dependencies.ps1  migrate_to_web5.dart  progress_automation.rs  requirements.txt  run_alignment.rs  run_fixes.rs  run_progress.rs  run_tests.sh  setup.sh  setup_github_pages.ps1  setup_sensitive_data.py  standardize_docs.ps1  standardize_repos.ps1  standardize_repos.sh  sync_repos.sh  system_alignment.rs  system_setup.sh  trigger_commit_cycle.dart  update_symlinks.ps1  verify_docs.ps1
scripts/common/: utils.sh
scripts/core/: setup.sh  test.sh
scripts/enterprise/: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  commit.sh  setup.sh  test.sh
scripts/lib/: bitcoin_standards.sh  common.sh  module_manager.sh  monitor.py  pipeline.py  project_config.py  utils.py
scripts/ops/: deprecation_manager.sh  health_check.sh  log_manager.sh  ml_deprecation.sh  prometheus_exporter.sh
scripts/os_setup/: linux_setup.sh  macos_setup.sh  windows_setup.ps1
(+878 files in other folders)
