[workspace]
members = [
    "dash33",
    "enterprise",
    "dependencies",
    "mobile"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Botshelo Mokoka <botshelomokoka@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
bitcoin = { version = "0.29", features = ["rand"] }
bitcoin-wallet = "0.3"
miniscript = "8.0"
secp256k1 = { version = "0.24", features = ["rand"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.9"

# Network
zmq = "0.10"

# Analytics
ndarray = "0.15.6"
plotters = "0.3.5"
linfa = "0.6.1"
linfa-clustering = "0.6.1"

# Testing
tokio-test = "0.4"
tempfile = "3.3"
hex = "0.4"

[package]
name = "anya"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Dependencies
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Web5 Integration
web5 = { workspace = true }
jsonschema = { workspace = true }

# Blockchain Integration
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }

# Networking
libp2p = { workspace = true }

# Logging and Metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = "0.2.5"
metrics = { workspace = true }
metrics-exporter-prometheus = "0.12.1"

# Time and Date
chrono = { version = "0.4.31", features = ["serde"], default-features = false }

# Terminal Detection
is-terminal = "0.4.9"

# Cryptography
curve25519-dalek = { workspace = true }

# Utilities
uuid = { version = "1.8.0", features = ["v4"] }
rand = "0.8.5"
base64 = "0.21.7"
hex = "0.4.3"
sha2 = "0.10.8"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
argon2 = "0.5.3"
x509-parser = "0.15.1"
rustls = { version = "0.22.1", features = ["dangerous_configuration"] }
data-encoding = "2.5.0"
jsonwebtoken = "9.2.0"
totp-rs = "5.4.0"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tempfile = "3.9.0"
criterion = { workspace = true }
proptest = { workspace = true }

[build-dependencies]
tonic-build = "0.10.2"

[features]
default = ["enterprise"]
enterprise = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
