[package]
name = "anya-bitcoin"
version.workspace = true
edition.workspace = true
description = "Bitcoin-specific functionality for Anya project"
authors.workspace = true
license.workspace = true

[dependencies]
# Core Dependencies
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
secp256k1 = { workspace = true }

# Workspace Dependencies
tokio = { workspace = true }
serde = { workspace = true }

[lib]
name = "anya_bitcoin"
path = "src/lib.rs"

[features]
default = []
advanced = []
