[package]
name = "anya-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Core functionality for Anya Bitcoin development"

[dependencies]
# Bitcoin essentials
bitcoin = { version = "0.31.0", features = ["rand"] }
secp256k1 = { version = "0.27.0", features = ["rand"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
