[package]
name = "anya-enterprise"
version = "0.3.0"
edition = "2021"
authors = ["Anya Enterprise Contributors"]
description = "Advanced features for Anya Core (Enterprise Edition)"
license = "Commercial"
publish = false

[lib]
name = "anya_enterprise"
crate-type = ["cdylib", "rlib"]

[dependencies]
anya-core = { path = "../anya-core", version = "0.3.0", features = ["enterprise"] }
pyo3 = { version = "0.19", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
actix-web = "4.3"
actix-rt = "2.8"
futures = "0.3"
utoipa = { version = "3.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1", features = ["actix-web"] }
ndarray = "0.15"
bitcoin = "0.29"
bitcoin-wallet = "0.3"
bitcoincore-rpc = "0.16"

[features]
default = []
opendp = []
spdz = []
seal = []
advanced_dlc = []
web_interface = []
cosmos_sdk = []
polkadot_xcmp = []
ipfs = []
orbitdb = []
ipld = []
ipas = []
webauthn = []
mobile_apps = []
ordinals_analysis = []
taro_asset = []
advanced_defi = []
advanced_features = []