[package]
name = "anya-mobile"
version = "0.1.0"
edition = "2021"
authors = ["Anya Development Team"]
description = "Mobile wallet implementation for Anya"

[dependencies]
# Bitcoin Core
bitcoin = { version = "0.31.0", features = ["rand-std"] }
lightning = { version = "0.0.118" }
miniscript = { version = "10.0.0" }

# Cryptography
secp256k1 = { version = "0.27.0", features = ["rand-std"] }
ring = "0.17.8"

# Async Runtime
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1.74"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Error Handling
thiserror = "1.0.50"
anyhow = "1.0.75"

# FFI
ffi-support = "0.4"
once_cell = "1.8"

# Local Dependencies
anya-bitcoin = { path = "../anya-bitcoin" }
anya-enterprise = { path = "../anya-enterprise" }

[lib]
name = "anya_mobile"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["bitcoin-wallet", "lightning", "enterprise"]
bitcoin-wallet = []
lightning = []
enterprise = []
ffi = []

[dev-dependencies]
tokio-test = "0.4.3"
test-log = "0.2.13"
