[package]
name = "anya-core"
version = "0.2.7"
authors = ["Botshelo Mokoka"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/botshelomokoka/anya-core"
description = "Core dependencies and shared components for the Anya Bitcoin Platform"

[workspace]
members = [
    "anya-bitcoin",
    "anya-core",
    "anya-enterprise",
    "anya-extensions",
    "anya-lightning",
    "anya-ml",
    "anya-web5",
    "dash33"
]
resolver = "2"

[workspace.package]
version = "0.2.7"
edition = "2021"
rust-version = "1.70"
authors = ["Botshelo Mokoka"]
repository = "https://github.com/botshelomokoka/anya-core"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core dependencies
bitcoin = { version = "0.32.4", features = ["rand", "taproot"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

# Web5 Integration
web5 = { git = "https://github.com/TBD54566975/web5-rs", package = "web5", tag = "v4.0.0" }

# Networking & RPC
lightning = "0.0.118"
dlc = "0.1"
libp2p = { version = "0.53.1", features = ["full"] }

# Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "json"] }
deadpool-postgres = "0.11.0"

# Logging & Metrics
tracing = { version = "0.1.40", features = ["attributes"] }
metrics = { version = "0.24.0", features = ["std"] }

# Security
ring = "0.17.8"
rustls = "0.22.1"
zeroize = "1.7.0"

# Testing
criterion = "0.5.1"
proptest = "1.5.0"
tokio-test = "0.4.3"

# ML & Analytics
ndarray = "0.15.6"
smartcore = "0.3.2"
linfa = "0.7.0"

[dependencies]
# Logging & Metrics
opentelemetry = { version = "0.21.0", features = ["rt-tokio"], optional = true }

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = true

[profile.test]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

[features]
default = ["standard-security"]
standard-security = []
advanced-security = []
enterprise = ["advanced-security", "hardware-wallet", "metrics"]
hardware-wallet = []
metrics = ["dep:opentelemetry"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-udeps]
ignore = ["criterion"] # Used only in bench
