[package]
name = "anya-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
chrono = "0.4"

[[bin]]
name = "run_fixes"
path = "run_fixes.rs"

[[bin]]
name = "run_progress"
path = "run_progress.rs" 