[package]
name = "anya-bitcoin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anya-core = { path = "../anya-core" }
bitcoin = { version = "0.31.0", features = ["rand"] }
secp256k1 = { version = "0.27.0", features = ["rand"] }
bitcoincore-rpc = "0.17.0"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
